Fixed x-position of logo on mobile

--- a/public/css/site.css
+++ b/public/css/site.css
@@ -309,7 +309,7 @@ body > nav {
           position: absolute;
           left: 50%;
           top: -48px;
-          margin-left: -54px;
+          margin-left: -45px;
           width: 120px;
           height: 160px;
           z-index: 0;
